# M-LWQ

./: CMakeLists.txt  Readme.md
src/: cycles.hpp  keccak4x.cpp  keccak4x.hpp  main.cpp  mlwq.cpp  mlwq.hpp  ntt.cpp  ntt.hpp  params.hpp  poly.cpp  poly.hpp  random.cpp  random.hpp  rlwqz.cpp  rlwqz.hpp  sha3.cpp  sha3.hpp  xof.cpp  xof.hpp
